Player model/data/views

--- a/Laboratorio2/Views/Team/Details.cshtml
+++ b/Laboratorio2/Views/Team/Details.cshtml
@@ -23,10 +23,10 @@
             @Html.DisplayFor(model => model.Coach)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Legue)
+            @Html.DisplayNameFor(model => model.Ligue)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Legue)
+            @Html.DisplayFor(model => model.Ligue)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CreationDate)
