--- a/Laboratorio2/Views/Player/Delete.cshtml
+++ b/Laboratorio2/Views/Player/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Laboratorio2.Models.TeamModel
+﻿@model Laboratorio2.Models.PlayerModel
 
 @{
     ViewData["Title"] = "Delete";
@@ -8,9 +8,15 @@
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>TeamModel</h4>
+    <h4>PlayerModel</h4>
     <hr />
     <dl class="row">
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Team)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Team)
+        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name)
         </dt>
@@ -18,22 +24,28 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Coach)
+            @Html.DisplayNameFor(model => model.LName)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Coach)
+            @Html.DisplayFor(model => model.LName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Ligue)
+            @Html.DisplayNameFor(model => model.Role)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Ligue)
+            @Html.DisplayFor(model => model.Role)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CreationDate)
+            @Html.DisplayNameFor(model => model.KDA)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CreationDate)
+            @Html.DisplayFor(model => model.KDA)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CreepScore)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CreepScore)
         </dd>
     </dl>
     
