--- a/Laboratorio2/Views/Player/Index.cshtml
+++ b/Laboratorio2/Views/Player/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Laboratorio2.Models.TeamModel>
+﻿@model IEnumerable<Laboratorio2.Models.PlayerModel>
 
 @{
     ViewData["Title"] = "Index";
@@ -13,16 +13,22 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Team)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Coach)
+                @Html.DisplayNameFor(model => model.LName)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Ligue)
+                @Html.DisplayNameFor(model => model.Role)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreationDate)
+                @Html.DisplayNameFor(model => model.KDA)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CreepScore)
             </th>
             <th></th>
         </tr>
@@ -31,16 +37,22 @@
 @foreach (var item in Model) {
         <tr>
             <td>
+                @Html.DisplayFor(modelItem => item.Team)
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Coach)
+                @Html.DisplayFor(modelItem => item.LName)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Ligue)
+                @Html.DisplayFor(modelItem => item.Role)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreationDate)
+                @Html.DisplayFor(modelItem => item.KDA)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreepScore)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
