--- a/Laboratorio2/Views/Team/Edit.cshtml
+++ b/Laboratorio2/Views/Team/Edit.cshtml
@@ -23,9 +23,9 @@
                 <span asp-validation-for="Coach" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Legue" class="control-label"></label>
-                <input asp-for="Legue" class="form-control" />
-                <span asp-validation-for="Legue" class="text-danger"></span>
+                <label asp-for="Ligue" class="control-label"></label>
+                <input asp-for="Ligue" class="form-control" />
+                <span asp-validation-for="Ligue" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="CreationDate" class="control-label"></label>
