--- a/Laboratorio2/Views/Player/Index.cshtml
+++ b/Laboratorio2/Views/Player/Index.cshtml
@@ -5,7 +5,11 @@
 }
 
 <h1>Index</h1>
-
+<form asp-controller="Player" asp-action="Index" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" />
+    <hr />
+    <button type="submit">Upload</button>
+</form>
 <p>
     <a asp-action="Create">Create New</a>
 </p>
