Lista de jugadores

--- a/Laboratorio2/Views/Team/Index.cshtml
+++ b/Laboratorio2/Views/Team/Index.cshtml
@@ -49,7 +49,8 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Name  }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Name }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Name })
+                @Html.ActionLink("Delete", "Delete", new { id = item.Name }) | 
+                @Html.ActionLink("Lista de jugadores", "Index","Player")
             </td>
         </tr>
 }
